@@ -9,7 +9,10 @@
   "issues_url": "https://simp-project.atlassian.net",
   "tags": [
     "simp",
-    "pki"
+    "pki",
+    "cert",
+    "certs",
+    "key"
   ],
   "dependencies": [
     {
@@ -40,5 +43,16 @@
         "7"
       ]
     }
-  ]
+  ],
+  "requirements": [
+    {
+      "name": "puppet",
+      "version_requirement": "4.x"
+    },
+    {
+      "name": "pe",
+      "version_requirement": ">= 2016.2.0"
+    }
+  ],
+  "data_provider": "hiera"
 }
